# SkillboxStudy

./: .gitignore  README.md
ce180503-recursive-counting-even-digits240717/: main.cpp
ce190501-search-for-words-in-a-file240726/: main.cpp
ce330502fishing_game/: CMakeLists.txt
ce330502fishing_game/include/: common.h  lagunaException.h
ce330502fishing_game/src/: CMakeLists.txt  laguna.cpp  lagunaException.cpp
ce330503templates/: CMakeLists.txt
ce330503templates/include/: common.h  loclib.h  message.h  registry.h
ce330503templates/src/: CMakeLists.txt  loclib.cpp  main.cpp
cpp110601caesarCipher240418ce/: README.md  main.cpp
cpp110602isEmailCorrect240419ce/: README.md  main.cpp
cpp110603ipAddressValidation240421ce1/: README.md  main.cpp
cpp120501condominium240425ce/: README.md  main.cpp
cpp140608seaBattle240529ce/: READMY.md  main.cpp
cpp160605smartHome240620ce/: READMY.md  main.cpp
cpp180502recursiveRabbit240716ce/: main.cpp
cpp190502-text-file-viewer-via-getline240728ce/: main.cpp
cpp190502-text-file-viewer240726ce/: main.cpp
cpp190503payroll240729ce/: main.cpp
cpp190504-detector-png-file240806ce/: main.cpp
cpp190505-what-where-when240809ce/: main.cpp
cpp200501-entry-in-the-accounting-register240817ce/: main.cpp
cpp200502-drawing-random-pictures240818ce/: main.cpp
cpp200503fishing240819ce/: main.cpp
cpp200504anATM240820ce/: main.cpp
cpp210501newPayroll240829ce/: main.cpp
cpp210501newPayrollLikeStephenPrata240915ce/: main.cpp
cpp210502villageModel240919ce/: main.cpp
cpp210502villageModel241003al/: main.cpp  read_village_separate.cpp
cpp210503mathVec241128ce/: main.cpp  main_al.cpp
cpp210504game241130ce/: main.cpp
cpp220601phoneBook241215ce/: main.cpp
cpp220601phone_book241215ce/: main.cpp
cpp220602registry241222ce/: main.cpp
cpp220603anagrams241223ce/: main.cpp
cpp230401daysOfTheWeek241224ce/: main.cpp
cpp230602seasons241225ce/: main.cpp
cpp230603carriages241225ce/: main.cpp
cpp240501timeTracking241231ce/: main.cpp
cpp240502birthdayReminder250102ce/: main.cpp
cpp240502birthdayReminder250106ce/: main.cpp
cpp240503timer250112ce/: main.cpp
cpp250401sawbones250124ce/: CMakeLists.txt
cpp250402computerSimulator250128ce/: CMakeLists.txt
cpp250402computerSimulator250128ce/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
cpp260401audioplayer250213ce/: CMakeLists.txt
cpp260402mobilePhone250215ce/: CMakeLists.txt
cpp260402mobilephone250223ce/: CMakeLists.txt
cpp260402mobilephone250223ce/src/: CMakeLists.txt  address.cpp  cci.cpp  timer.cpp
cpp260403windows250224ce/: CMakeLists.txt
cpp260403windows250224ce/src/: CMakeLists.txt  cci.cpp  main.cpp  monitor.cpp  window.cpp
cpp270401geometric250303ce/: CMakeLists.txt
cpp270401geometric250303ce/src/: CMakeLists.txt  cci.cpp  circle.cpp  main.cpp  rectangle.cpp  shape.cpp  square.cpp  triangle.cpp
cpp270402company250309ce/: CMakeLists.txt
cpp270402company250309ce/src/: CMakeLists.txt  cci.cpp  ceo.cpp  employee.cpp  main.cpp  staff.cpp  team.cpp  teamlead.cpp
cpp270403elvenVillage250326ce/: CMakeLists.txt
cpp280402railwayStation250619ce/: CMakeLists.txt
cpp280403kitchen250630ce/: CMakeLists.txt
cpp290401underdog250727ce/: CMakeLists.txt
cpp290401underdog250727ce/src/: CMakeLists.txt  dog.cpp  loclib.cpp  main.cpp  talent.cpp
cpp290402shapes250723ce/: CMakeLists.txt
cpp290402shapes250723ce/src/: CMakeLists.txt  circle.cpp  main.cpp  rectangle.cpp  shape.cpp  trianlge.cpp
cpp300401httpRequests250802ce/: CMakeLists.txt
cpp300401httpRequests250802ce/include/: common.h  requests.h
cpp300401httpRequests250802ce/src/: CMakeLists.txt  main.cpp  requests.cpp
cpp300402webPageTitle250803ce/: CMakeLists.txt
cpp300403requestsWithArguments250805ce/: CMakeLists.txt
cpp300403requestsWithArguments250805ce/include/: common.h
cpp300403requestsWithArguments250805ce/src/: CMakeLists.txt  main.cpp
cpp310501smartPointers250817ce/: CMakeLists.txt
cpp310502shared_ptr_toy250829ce/: CMakeLists.txt
cpp320201jsonSerialization250831sb/: CMakeLists.txt  README.md  main.cpp  record.json  record1.json  sb01json.json  sb02serialization
cpp320301jsonDeserialization250901sb/: CMakeLists.txt  main.cpp
cpp320401protobuf250914sb/: CMakeLists.txt
cpp320401protobuf250914sb/include/: enterprise.pb.h
cpp320401protobuf250914sb/proto/: enterprise.proto
cpp320401protobuf250914sb/src/: enterprise.pb.cc  main.cpp
cpp320501movie250902ce/: CMakeLists.txt  README.md
cpp320501movie250902ce/include/: common.h  movie.h
cpp320501movie250902ce/src/: CMakeLists.txt  main.cpp  movie.cpp
cpp320502movies250907ce/: movies.json
cpp320502movies250907ce/src/: CMakeLists.txt  main.cpp  movie.cpp  movies.cpp
cpp320503protobuf250914ce/: CMakeLists.txt
cpp320503protobuf250914ce/proto/: enterprise.proto
cpp320503protobuf250914ce/src/: main.cpp
cpp3301exception250914ce/: store1.json
cpp3305004arithmeticMean251001ce/: CMakeLists.txt
cpp330501exception250914ce/: CMakeLists.txt
cpp330501exception250914ce/include/: basket.h
cpp330501exception250914ce/src/: CMakeLists.txt  basket.cpp  store.cpp
cpp330503templates250927ce/: CMakeLists.txt
cpp340401qt251029sb/: CMakeLists.txt  cpp340401qt251029sb.code-workspace  main.cpp
cpp360101qt251109sb/: CMakeLists.txt  main.cpp
cpp360201widgets251110sb/: CMakeLists.txt  main.cpp
cpp360202widgets251116sb/: CMakeLists.txt  main.cpp
cpp360301responsiveUI251118sb/: CMakeLists.txt  main.cpp
cpp360302responsiveUI251118sb/: CMakeLists.txt  main.cpp
cpp360303responsiveUI251118sb/: CMakeLists.txt  main.cpp
cpp360401widggets_practice251118ce/: CMakeLists.txt  main.cpp
cpp370101qtDesigner251127sb/: 1.ui  CMakeLists.txt  main.cpp
cpp370201connectingInterfacesToTheApplication251130sb/: 1.ui  CMakeLists.txt  main.cpp
cpp370202connectingInterfacesToTheApplication251130sb/: CMakeLists.txt  caller.ui  callermainwindow.h  main.cpp
cpp370301QMLandQtCreator251225sb/: CMakeLists.txt  mainwindow.ui
cpp370302onlyQml251225sb/: CMakeLists.txt  Main.qml  main.cpp
(+124 files in other folders)
